--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-router-devtools": "^1.132.51",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.132.51",
+    "es-toolkit": "^1.40.0",
     "ky": "^1.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
