--- a/templates/vite-ts-router/tsconfig.app.json
+++ b/templates/vite-ts-router/tsconfig.app.json
@@ -20,7 +20,7 @@
     /* Linting */
     "strict": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "erasableSyntaxOnly": true,
     "noUncheckedIndexedAccess": true,
     "noFallthroughCasesInSwitch": true,
